[tool.poetry]
package-mode = false

[project]
name = "portfolio2"
version = "0.1.0"
description = "Particle Filter Sensor Fusion - Portfolio Exam 2"
authors = [
    {name = "Rafsan Bari Shafin",email = "shafinrafsan46@gmail.com"},
    {name = "Israt Jahan",email = "isratjahan2022416@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
